hard-gists/e6d0864738da10cb9685/run.log
=== Docker Run Log for e6d0864738da10cb9685 ===
Started at: Mi 29. Okt 20:47:39 CET 2025

[2025-10-29 20:47:39] START: Running container for e6d0864738da10cb9685
[2025-10-29 20:47:40] SUCCESS: Container 95cb8f7d21b515579acede39374e8bdd61e4526d92571d46b2692272b2f11326 started for e6d0864738da10cb9685
=== Container logs for e6d0864738da10cb9685 ===
  File "/snippet.py", line 26
    print "*************************************"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e6d0864738da10cb9685 ===
[2025-10-29 20:47:42] INFO: Container 95cb8f7d21b515579acede39374e8bdd61e4526d92571d46b2692272b2f11326 has stopped
